--- a/client-chat/package.json
+++ b/client-chat/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme-to-json": "^3.6.1",
     "react-scroll-to-bottom": "^4.1.0",
     "socket.io-client": "^3.1.0"
   }
